# polyzone

./: .gitignore  cloc.sh  package-lock.json  package.json
src/core/: eslint.config.mjs  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
src/core/src/util/: Color3.test.ts  Color3.ts  Color4.test.ts  Color4.ts  Quaternion.test.ts  Quaternion.ts  Vector2.ts  Vector3.test.ts  Vector3.ts  index.ts
src/core/src/world/: GameObject.ts  Transform.ts
src/editor/: eslint.config.mjs  package.json
src/editor/src/app/: Cargo.toml
src/editor/src/app/capabilities/: default.json  migrated.json
src/editor/src/app/src/filesystem/: assets.rs  project.rs  scenes.rs
src/editor/src/web/: next.config.mjs  next.config.ts  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
src/runtime/: eslint.config.mjs  jest.config.ts  package.json  tsconfig.json
src/runtime/scripts/: generate-core.js
src/runtime/src/: Game.ts  HackyMaterial.ts  Resolver.ts  ScriptLoader.ts  core.g.ts  index.ts
src/runtime/src/cartridge/: Cartridge.ts  index.ts
src/runtime/src/filesystem/: CartridgeFileSystem.ts  IFileSystem.ts
src/sample-cartridge/: .gitignore  eslint.config.mjs  package-lock.json  package.json  sample.pzproj  tsconfig.json
src/sample-cartridge/materials/: big hand.pzmat  debug-reflection-3x2.pzmat  debug-reflection-6x1.pzmat  debug-reflection-box-net.pzmat  debug-reflection-separate.pzmat  metal.pzmat  new material.pzmat
src/sample-cartridge/models/: quad.mtl
src/sample-cartridge/scenes/: main.pzscene  second.pzscene  spin_demo.pzscene  transform-debug.pzscene
src/sample-cartridge/scripts/: my-object.ts
src/web-player/: eslint.config.mjs  package.json  tsconfig.json  vite.config.ts
(+387 files in other folders)
