[package]
name = "polyzone_editor"
version = "0.0.0"
description = "PolyZone is a fully integrated environment to quickly and easily build, share, and play PS1 and N64 style games."
authors = ["peabnuts123"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique, such that it won't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "polyzone_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


# @TODO (one day)
# [[bin]]
# name = "polyzone_cli"
# path = "src/cli.rs"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
debounce = "0.2.2"
ignore = "0.4.23"
ignore-files = "3.0.2"
jsonc-parser = { version = "0.26.2", features = ["serde"] }
log = "0.4.22"
notify = "7.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
swc = "22.0.0"
swc_common = "9.0.0"
swc_ecma_ast = "9.0.0"
swc_ecma_parser = "12.0.0"
swc_ecma_transforms_module = "14.0.0"
swc_ecma_transforms_typescript = "14.0.0"
swc_ecma_visit = "9.0.0"
tauri = { version = "2.5.1", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "2.2.1"
tauri-plugin-fs = { version = "2.2.1", features = ["watch"] }
tauri-plugin-log = "2.4.0"
tauri-plugin-shell = "2.2.1"
tokio = "1.42.0"
tokio-util = "0.7.13"
twox-hash = { version = "2.0.1", features = ["xxhash3_64", "std"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
zip = "2.1.1"
